--- a/src/main/resources/com/portal/template/Template2Mapper.xml
+++ b/src/main/resources/com/portal/template/Template2Mapper.xml
@@ -2,8 +2,9 @@
 <!DOCTYPE mapper
   PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
   "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="com.portal.admin.dao.MessageDao">
+<mapper namespace="com.portal.template.dao.Template2Dao">
 
+	<!-- 메세지 조회 -->
     <select id="search" parameterType="map" resultType="ParamMap">
         SELECT  
                 A.MSG_ID
@@ -24,6 +25,8 @@
                 A.MSG_ID
         
     </select>
+    
+    <!-- 메세지 저장 -->
     <insert id="save"  parameterType="map">
         MERGE INTO MESSAGE A
         USING (SELECT 'A' AS A) B
@@ -52,6 +55,8 @@
                 );
 
     </insert>
+    
+    <!-- 메세지 삭제 -->
     <delete id="delete" parameterType="map">
         DELETE  FROM MESSAGE
         WHERE   MSG_ID  = #{msgId}
